--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -222,87 +222,184 @@ tooltip {
     display: flex !important;
 }
 
-:root:not([uidensity]) .titlebar-buttonbox {
-    @media (-moz-platform: macos) {
-        /*  Make same as Safari's URL bar padding on Catalina −  */
-        margin-inline: 14px 6px !important;
-    }
-    @media (-moz-platform: windows) {
-        /*  Make same as Windows 11  */
-        > .titlebar-button:hover {
-            background-color: var(--toolbarbutton-hover-background) !important;
-            &:active {
-                background-color: light-dark( rgba(0, 0, 0, .025), rgba(255, 255, 255, .045) ) !important;
-            }
-        }
-        > .titlebar-close:hover {
-            stroke: white;
-            background-color: #C42B1C !important;
-            &:active {
-                background-color: light-dark(#C84031, #B22A1B) !important;
-            }
+@media (-moz-platform: macos) {
+    :root:not([uidensity]) {
+        .titlebar-buttonbox {
+            /*  Make same as Safari's URL bar padding on Catalina −  */
+            margin-inline: 14px 6px !important;
         }
     }
-}
-
-:root[uidensity] .titlebar-buttonbox {
-    @media (-moz-platform: macos) {
-        /*  Make same as Safari on Big Sur +  */
-        margin-inline: 19px 7px !important;
-    }
-    @media (-moz-platform: windows) {
-        padding-inline-end: calc(var(--toolbar-start-end-padding) - var(--toolbarbutton-outer-padding)) !important;
-        > .titlebar-button {
-            margin-inline: 4px !important;
-            padding: 8px !important;
-            border-radius: var(--toolbarbutton-border-radius) !important;
-            &:hover {
-                background-color: var(--toolbarbutton-hover-background) !important;
-                &:active {
-                    background-color: var(--toolbarbutton-active-background) !important;
-                }
-            }
-        }
-        > .titlebar-close:hover {
-            stroke: white;
-            background-color: #C42B1C !important;
-            &:active {
-                background-color: light-dark(#AC2619, #CB4437) !important;
-            }
+    :root[uidensity] {
+        .titlebar-buttonbox {
+            /*  Make same as Safari on Big Sur +  */
+            margin-inline: 19px 7px !important;
         }
     }
 }
 
 @media (-moz-platform: windows) {
-    :root:not([uidensity]) .titlebar-buttonbox-container {
-        align-self: stretch !important;
+    @media not (-moz-bool-pref: "userChrome.windowControls.macStyle") {
+        .titlebar-min {
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5 6a.5.5 0 0 0-.5.5.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 0-.5-.5z'/%3E%3C/svg%3E") !important;
+            @media (resolution > 1dppx) {
+                list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5 5.5a.5.5 0 0 0-.5.5.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 0-.5-.5z'/%3E%3C/svg%3E") !important;
+            }
+        }
+
+        .titlebar-max {
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.5 1C1.677 1 1 1.677 1 2.5v7c0 .823.677 1.5 1.5 1.5h7c.823 0 1.5-.677 1.5-1.5v-7c0-.823-.677-1.5-1.5-1.5zm0 1h7c.282 0 .5.218.5.5v7c0 .282-.218.5-.5.5h-7a.493.493 0 0 1-.5-.5v-7c0-.282.218-.5.5-.5z'/%3E%3C/svg%3E") !important;
+        }
+
+        .titlebar-restore {
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.5 2h5A1.5 1.5 45 0 1 10 3.5v5a1 1 135 0 0 1-1v-4A2.5 2.5 45 0 0 8.5 1h-4a1 1 135 0 0-1 1zM1 4.5v5A1.5 1.5 45 0 0 2.5 11h5A1.5 1.5 135 0 0 9 9.5v-5A1.5 1.5 45 0 0 7.5 3h-5A1.5 1.5 135 0 0 1 4.5zM2.5 4h5a.5.5 45 0 1 .5.5v5a.5.5 135 0 1-.5.5h-5a.5.5 45 0 1-.5-.5v-5a.5.5 135 0 1 .5-.5z'/%3E%3C/svg%3E") !important;
+        }
+
+        .titlebar-close {
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5 1a.5.5 0 0 0-.353.146.5.5 0 0 0 0 .708L5.293 6l-4.146 4.145a.5.5 0 0 0 0 .707.5.5 0 0 0 .707 0L6 6.706l4.146 4.146a.5.5 0 0 0 .706 0 .5.5 0 0 0 0-.707L6.708 6l4.146-4.146a.5.5 0 0 0 0-.707.5.5 0 0 0-.707 0L5.998 5.292 1.855 1.146A.5.5 0 0 0 1.5 1z'/%3E%3C/svg%3E") !important;
+        }
+        :root:not([uidensity]) {
+            .titlebar-buttonbox-container {
+                align-self: stretch !important;
+            }
+            .titlebar-buttonbox {
+                /*  Make same as Windows 11  */
+                > .titlebar-button:hover {
+                    background-color: var(--toolbarbutton-hover-background) !important;
+                    &:active {
+                        background-color: light-dark( rgba(0, 0, 0, .025), rgba(255, 255, 255, .045) ) !important;
+                    }
+                }
+                > .titlebar-close:hover {
+                    stroke: white;
+                    background-color: #C42B1C !important;
+                    &:active {
+                        background-color: light-dark(#C84031, #B22A1B) !important;
+                    }
+                }
+            }
+        }
+        :root[uidensity] {
+            .titlebar-buttonbox {
+                padding-inline-end: calc(var(--toolbar-start-end-padding) - var(--toolbarbutton-outer-padding)) !important;
+                > .titlebar-button {
+                    margin-inline: 4px !important;
+                    padding: 8px !important;
+                    border-radius: var(--toolbarbutton-border-radius) !important;
+                    &:hover {
+                        background-color: var(--toolbarbutton-hover-background) !important;
+                        &:active {
+                            background-color: var(--toolbarbutton-active-background) !important;
+                        }
+                    }
+                }
+                > .titlebar-close:hover {
+                    stroke: white;
+                    background-color: #C42B1C !important;
+                    &:active {
+                        background-color: light-dark(#AC2619, #CB4437) !important;
+                    }
+                }
+            }
+        }
+    }
+    @media (-moz-bool-pref: "userChrome.windowControls.macStyle") {
+        .titlebar-buttonbox-container {
+            order: -1 !important;
+        }
+        .titlebar-min {
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m9.25 5.75 a0.5 0.5 0 0 1 0 1.5 l-6.5 0 a0.5 0.5 0 0 1 0 -1.5 z'/%3E%3C/svg%3E") !important;
+            @media (resolution > 1dppx) {
+                list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m9.25 5.25 a0.5 0.5 0 0 1 0 1.5 l-6.5 0 a0.5 0.5 0 0 1 0 -1.5 z'/%3E%3C/svg%3E") !important;
+            }
+            background-color: #F5BE4E !important;
+            stroke: transparent !important;
+            outline: 0.55px solid light-dark(#D79F3E, transparent) !important;
+            outline-offset: -0.55px !important;
+            .titlebar-buttonbox:hover & {
+                stroke: light-dark(#90591C, #8F581C) !important;
+            }
+            &:hover:active {
+                background-color: light-dark(#B78F3B, #FCEA74) !important;
+                stroke: light-dark(#51290B, #705E1B) !important;
+                outline: 0.55px solid light-dark(#99702B, transparent) !important;
+                outline-offset: -0.55px !important;
+            }
+        }
+
+        .titlebar-max {
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m9 4.5 l0 3.5 a1 1 0 0 1 -1 1 l-3.5 0 m-1.5 -1.5 l0 -3.5 a1 1 0 0 1 1 -1 l3.5 0 z'/%3E%3C/svg%3E") !important;
+            background-color: #61C454 !important;
+            stroke: transparent !important;
+            outline: 0.55px solid light-dark(#50A63D, transparent) !important;
+            outline-offset: -0.55px !important;
+            .titlebar-buttonbox:hover & {
+                stroke: light-dark(#295F18, #286017) !important;
+            }
+            &:hover:active {
+                background-color: light-dark(#47933E, #87F27F) !important;
+                stroke: light-dark(#112F07, #2C661A) !important;
+                outline: 0.55px solid light-dark(#397529, transparent) !important;
+                outline-offset: -0.55px !important;
+            }
+        }
+
+        .titlebar-restore {
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m10.5 6 l-3.5 0 a1 1 0 0 0 -1 1 l0 3.5 m0 -9 l0 3.5 a1 1 0 0 1 -1 1 l-3.5 0 z'/%3E%3C/svg%3E") !important;
+            background-color: #61C454 !important;
+            stroke: transparent !important;
+            outline: 0.55px solid light-dark(#50A63D, transparent) !important;
+            outline-offset: -0.55px !important;
+            .titlebar-buttonbox:hover & {
+                stroke: light-dark(#295F18, #286017) !important;
+            }
+            &:hover:active {
+                background-color: light-dark(#47933E, #87F27F) !important;
+                stroke: light-dark(#112F07, #2C661A) !important;
+                outline: 0.55px solid light-dark(#397529, transparent) !important;
+                outline-offset: -0.55px !important;
+            }
+        }
+
+        .titlebar-close {
+            order: -1 !important;
+            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='m6 5 l1.75 -1.75 a0.5 0.5 0 0 1 1 1 l-1.75 1.75 l1.75 1.75 a0.5 0.5 0 0 1 -1 1 l-1.75 -1.75 l-1.75 1.75 a0.5 0.5 0 0 1 -1 -1 l1.75 -1.75 l-1.75 -1.75 a0.5 0.5 0 0 1 1 -1 z'/%3E%3C/svg%3E") !important;
+            background-color: #ED6A5E !important;
+            stroke: transparent !important;
+            outline: 0.55px solid light-dark(#D24F42, transparent) !important;
+            outline-offset: -0.55px !important;
+            .titlebar-buttonbox:hover & {
+                stroke: light-dark(#6A110A, #8C1A10) !important;
+            }
+            &:hover:active {
+                background-color: light-dark(#B14F46, #F09289) !important;
+                stroke: light-dark(#2F0402, #69110A) !important;
+                outline: 0.55px solid light-dark(#96342A, transparent) !important;
+                outline-offset: -0.55px !important;
+            }
+        }
+        .titlebar-button {
+            margin-inline: 4px !important;
+            padding: 0px !important;
+            border-radius: 100px !important;
+        }
+        :root:not([uidensity]) {
+            .titlebar-buttonbox {
+                /*  Make same as Safari's URL bar padding on Catalina −  */
+                margin-inline: 11px 3px !important;
+            }
+        }
+        :root[uidensity] {
+            .titlebar-buttonbox {
+                /*  Make same as Safari on Big Sur +  */
+                margin-inline: 16px 4px !important;
+            }
+        }
     }
 }
 
 @media (-moz-platform: linux) {
     .titlebar-buttonbox-container {
         align-self: stretch !important;
-    }
-}
-
-@media (-moz-platform: windows) {
-    .titlebar-min {
-        list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5 6a.5.5 0 0 0-.5.5.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 0-.5-.5z'/%3E%3C/svg%3E") !important;
-        @media (resolution > 1dppx) {
-            list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5 5.5a.5.5 0 0 0-.5.5.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 0-.5-.5z'/%3E%3C/svg%3E") !important;
-        }
-    }
-
-    .titlebar-max {
-        list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.5 1C1.677 1 1 1.677 1 2.5v7c0 .823.677 1.5 1.5 1.5h7c.823 0 1.5-.677 1.5-1.5v-7c0-.823-.677-1.5-1.5-1.5zm0 1h7c.282 0 .5.218.5.5v7c0 .282-.218.5-.5.5h-7a.493.493 0 0 1-.5-.5v-7c0-.282.218-.5.5-.5z'/%3E%3C/svg%3E") !important;
-    }
-
-    .titlebar-restore {
-        list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M3.5 2h5A1.5 1.5 45 0 1 10 3.5v5a1 1 135 0 0 1-1v-4A2.5 2.5 45 0 0 8.5 1h-4a1 1 135 0 0-1 1zM1 4.5v5A1.5 1.5 45 0 0 2.5 11h5A1.5 1.5 135 0 0 9 9.5v-5A1.5 1.5 45 0 0 7.5 3h-5A1.5 1.5 135 0 0 1 4.5zM2.5 4h5a.5.5 45 0 1 .5.5v5a.5.5 135 0 1-.5.5h-5a.5.5 45 0 1-.5-.5v-5a.5.5 135 0 1 .5-.5z'/%3E%3C/svg%3E") !important;
-    }
-
-    .titlebar-close {
-        list-style-image: url("data:image/svg+xml,%3Csvg width='12' height='12' fill='context-stroke' fill-opacity='context-stroke-opacity' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1.5 1a.5.5 0 0 0-.353.146.5.5 0 0 0 0 .708L5.293 6l-4.146 4.145a.5.5 0 0 0 0 .707.5.5 0 0 0 .707 0L6 6.706l4.146 4.146a.5.5 0 0 0 .706 0 .5.5 0 0 0 0-.707L6.708 6l4.146-4.146a.5.5 0 0 0 0-.707.5.5 0 0 0-.707 0L5.998 5.292 1.855 1.146A.5.5 0 0 0 1.5 1z'/%3E%3C/svg%3E") !important;
     }
 }
 
@@ -483,8 +580,10 @@ tooltip {
 }
 
 @media (-moz-platform: windows) {
-    :root[uidensity]:is([tabsintitlebar], [customtitlebar], [inFullscreen]) #PanelUI-button {
-        padding-inline-end: 0 !important;
+    @media not (-moz-bool-pref: "userChrome.windowControls.macStyle") {
+        :root[uidensity]:is([tabsintitlebar], [customtitlebar], [inFullscreen]) #PanelUI-button {
+            padding-inline-end: 0 !important;
+        }
     }
 }
 
